<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WaitressHelper</string>
    <string name="action_settings">Settings</string>
    <string name="record">Record</string>
    <string name="title_activity_record">Record Patron</string>
    <string name="title_activity_sotre">Store File</string>
    <string name="title_activity_view">View Patrons</string>
    <string name="save_file">Save File</string>
    <string name="file_hint">Enter File Name</string>
    <string name="enter_patron">Enter Patron</string>
    <string name="view_button">View</string>
    <string name="store_button">Store</string>
    <string name="load_button">Load</string>
    <string name="exit_button">Exit</string>

    <string-array name="menu_array">
        <item>Curry Chicken</item>
        <item>Roast Beef</item>
        <item>Pork Chops</item>
        <item>Salmon</item>
        <item>Jerk Chicken</item>
        <item>Meatballs</item>
        <item>Sloppy Joe</item>
        <item>Pizza</item>
    </string-array>

    <string name="table_id">Table Number</string>
    <string name="seat_id">Seat Number</string>
    <string name="add_new">Add New</string>
    <string name="done_button">Done</string>
    <string name="title_activity_load">LoadActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>