<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#FFFFCC"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/enterPatron"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_patron" />

    <Button
        android:id="@+id/viewButton"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/view_button" />

    <Button
        android:id="@+id/storeButton"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/store_button" />

    <Button
        android:id="@+id/loadButton"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/load_button" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/exit_button" />

</LinearLayout>