<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFCC"
    android:gravity="center|center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RecordActivity" >

    <EditText
        android:id="@+id/table_IDText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/table_id"
        android:textColor="#0000CC" >
    </EditText>

    <EditText
        android:id="@+id/seat_IDText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/seat_id"
        android:inputType="number"
        android:textColor="#0000CC" />

    <Spinner
        android:id="@+id/menuSpinner"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginBottom="30dp"
        android:gravity="center" />

    <Button
        android:id="@+id/addNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="fill_vertical"
        android:text="@string/add_new" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:text="@string/done_button" />

</LinearLayout>